Table users {
  id int [pk, increment]
  username varchar [not null]
  email varchar [not null, unique]
  password_hash varchar
  avatar_url text
  role varchar [default: 'user']
  created_at timestamp
}

Table follows {
  id int [pk, increment]
  follower_user_id int [not null]
  followed_user_id int [not null]
}

Table medias {
  id int [pk, increment]
  title varchar [not null]
  description text
  type varchar [not null]
  genres text
  soundtracks text
  release_year int
  age_rating varchar
  duration_minutes int
  trailer_url text
  cover_image_url text
  rating_average real
}

Table watchlists {
  id int [pk, increment]
  user_id int [not null]
  media_id int [not null]
  status varchar [not null]
}

Table ratings {
  id int [pk, increment]
  media_id int [not null]
  user_id int [not null]
  stars int [not null]
  comment text
  created_at timestamp
}

Ref: follows.follower_user_id > users.id
Ref: follows.followed_user_id > users.id
Ref: watchlists.user_id > users.id
Ref: watchlists.media_id > medias.id
Ref: ratings.user_id > users.id
Ref: ratings.media_id > medias.id